// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:card 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Card"
          >
            <div
              class="cxd-Card-heading"
            >
              <span
                class="cxd-Card-avtar pull-left thumb-md avatar b-3x m-r"
              >
                <img
                  class="cxd-Card-img"
                  src="data:image/svg+xml,%3C%3Fxml version='1.0' standalone='no'%3F%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'%3E%3Csvg t='1631083237695' class='icon' viewBox='0 0 1024 1024' version='1.1' xmlns='http://www.w3.org/2000/svg' p-id='2420' xmlns:xlink='http://www.w3.org/1999/xlink' width='1024' height='1024'%3E%3Cdefs%3E%3Cstyle type='text/css'%3E%3C/style%3E%3C/defs%3E%3Cpath d='M959.872 128c0.032 0.032 0.096 0.064 0.128 0.128v767.776c-0.032 0.032-0.064 0.096-0.128 0.128H64.096c-0.032-0.032-0.096-0.064-0.128-0.128V128.128c0.032-0.032 0.064-0.096 0.128-0.128h895.776zM960 64H64C28.8 64 0 92.8 0 128v768c0 35.2 28.8 64 64 64h896c35.2 0 64-28.8 64-64V128c0-35.2-28.8-64-64-64z' p-id='2421' fill='%23bfbfbf'%3E%3C/path%3E%3Cpath d='M832 288c0 53.024-42.976 96-96 96s-96-42.976-96-96 42.976-96 96-96 96 42.976 96 96zM896 832H128V704l224-384 256 320h64l224-192z' p-id='2422' fill='%23bfbfbf'%3E%3C/path%3E%3C/svg%3E"
                />
              </span>
              <div
                class="cxd-Card-meta"
              >
                <div
                  class="cxd-Card-title"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      标题
                    </span>
                  </span>
                </div>
                <div
                  class="cxd-Card-subTitle"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      副标题
                    </span>
                  </span>
                </div>
                <div
                  class="cxd-Card-desc"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      这是一段描述
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="cxd-Card-body"
            >
              <span
                class="cxd-TplField"
              >
                <span>
                  这里是内容
                </span>
              </span>
            </div>
            <div
              class="cxd-Card-footer-wrapper"
            >
              <div
                class="cxd-Card-actions-wrapper"
              >
                <div
                  class="cxd-Card-actions"
                >
                  <a
                    class="cxd-Card-action cxd-Card-action--sm"
                  >
                    <span>
                      编辑
                    </span>
                  </a>
                  <a
                    class="cxd-Card-action cxd-Card-action--sm"
                  >
                    <span>
                      删除
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:cards color 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Cards"
          >
            <div
              class="cxd-Cards-fixedTop"
            />
            <div
              class="cxd-Cards-body cxd-Grid"
            >
              <div
                class="cxd-Grid-col--sm6 cxd-Grid-col--md4 cxd-Grid-col--lg3"
              >
                <div
                  class="cxd-Card cxd-Card--link"
                >
                  <div
                    class="cxd-Card-heading"
                  >
                    <span
                      class="cxd-Card-avtarText"
                      style="background: rgb(180, 0, 158);"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          TR
                        </span>
                      </span>
                    </span>
                    <div
                      class="cxd-Card-meta"
                    />
                  </div>
                  <div
                    class="cxd-Card-body"
                  >
                    <div
                      class="cxd-Card-field"
                    >
                      <label
                        class="cxd-Card-fieldLabel"
                      >
                        Browser
                      </label>
                      <div
                        class="cxd-Card-fieldValue"
                      >
                        <span
                          class="cxd-PlainField"
                        >
                          Internet Explorer 4.0
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cxd-Grid-col--sm6 cxd-Grid-col--md4 cxd-Grid-col--lg3"
              >
                <div
                  class="cxd-Card cxd-Card--link"
                >
                  <div
                    class="cxd-Card-heading"
                  >
                    <span
                      class="cxd-Card-avtarText"
                      style="background: rgb(0, 180, 255);"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          CH
                        </span>
                      </span>
                    </span>
                    <div
                      class="cxd-Card-meta"
                    />
                  </div>
                  <div
                    class="cxd-Card-body"
                  >
                    <div
                      class="cxd-Card-field"
                    >
                      <label
                        class="cxd-Card-fieldLabel"
                      >
                        Browser
                      </label>
                      <div
                        class="cxd-Card-fieldValue"
                      >
                        <span
                          class="cxd-PlainField"
                        >
                          Chrome 44
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cxd-Grid-col--sm6 cxd-Grid-col--md4 cxd-Grid-col--lg3"
              >
                <div
                  class="cxd-Card cxd-Card--link"
                >
                  <div
                    class="cxd-Card-heading"
                  >
                    <span
                      class="cxd-Card-avtarText"
                      style="background: rgb(181, 14, 14);"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          GE
                        </span>
                      </span>
                    </span>
                    <div
                      class="cxd-Card-meta"
                    />
                  </div>
                  <div
                    class="cxd-Card-body"
                  >
                    <div
                      class="cxd-Card-field"
                    >
                      <label
                        class="cxd-Card-fieldLabel"
                      >
                        Browser
                      </label>
                      <div
                        class="cxd-Card-fieldValue"
                      >
                        <span
                          class="cxd-PlainField"
                        >
                          Firefox 1.0
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cxd-Grid-col--sm6 cxd-Grid-col--md4 cxd-Grid-col--lg3"
              >
                <div
                  class="cxd-Card cxd-Card--link"
                >
                  <div
                    class="cxd-Card-heading"
                  >
                    <span
                      class="cxd-Card-avtarText"
                      style="background: rgb(0, 120, 215);"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          PR
                        </span>
                      </span>
                    </span>
                    <div
                      class="cxd-Card-meta"
                    />
                  </div>
                  <div
                    class="cxd-Card-body"
                  >
                    <div
                      class="cxd-Card-field"
                    >
                      <label
                        class="cxd-Card-fieldLabel"
                      >
                        Browser
                      </label>
                      <div
                        class="cxd-Card-fieldValue"
                      >
                        <span
                          class="cxd-PlainField"
                        >
                          Opera 10
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cxd-Grid-col--sm6 cxd-Grid-col--md4 cxd-Grid-col--lg3"
              >
                <div
                  class="cxd-Card cxd-Card--link"
                >
                  <div
                    class="cxd-Card-heading"
                  >
                    <span
                      class="cxd-Card-avtarText"
                      style="background: rgb(232, 17, 35);"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          WE
                        </span>
                      </span>
                    </span>
                    <div
                      class="cxd-Card-meta"
                    />
                  </div>
                  <div
                    class="cxd-Card-body"
                  >
                    <div
                      class="cxd-Card-field"
                    >
                      <label
                        class="cxd-Card-fieldLabel"
                      >
                        Browser
                      </label>
                      <div
                        class="cxd-Card-fieldValue"
                      >
                        <span
                          class="cxd-PlainField"
                        >
                          Safari 12
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:cards media 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Card"
          >
            <div
              class="cxd-Card-multiMedia--left"
            >
              <img
                class="cxd-Card-multiMedia-img w-36 h-24"
                src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
              />
              <div
                class="cxd-Card-multiMedia-flex"
              >
                <div
                  class="cxd-Card-heading"
                >
                  <div
                    class="cxd-Card-meta"
                  >
                    <div
                      class="cxd-Card-title"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          标题
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="cxd-Card-toolbar"
                  >
                    <span
                      class="cxd-TplField label label-warning"
                    >
                      <span>
                        标签
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="cxd-Card-body"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      这里是内容
                    </span>
                  </span>
                </div>
                <div
                  class="cxd-Card-footer-wrapper"
                >
                  <div
                    class="cxd-Card-secondary"
                  >
                    <span
                      class="cxd-TplField"
                    >
                      <span>
                        次要说明
                      </span>
                    </span>
                  </div>
                  <div
                    class="cxd-Card-actions-wrapper"
                  >
                    <div
                      class="cxd-Card-actions"
                    >
                      <a
                        class="cxd-Card-action mr-4"
                      >
                        <span>
                          操作
                        </span>
                      </a>
                      <a
                        class="cxd-Card-action mr-2.5"
                      >
                        <span>
                          操作
                        </span>
                      </a>
                      <div
                        class="cxd-DropDown  cxd-Card-action pr-1 flex"
                      >
                        <button
                          class="cxd-Button cxd-Button--link cxd-Button--sm"
                        >
                          <i
                            class="m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
